--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="mobile-view-toolbar" role="toolbar" aria-label="Mobile view options">
+            <button type="button" class="mobile-view-button" data-view-mode="edit" aria-pressed="false">Edit</button>
+            <button type="button" class="mobile-view-button" data-view-mode="split" aria-pressed="true">Split</button>
+            <button type="button" class="mobile-view-button" data-view-mode="preview" aria-pressed="false">Preview</button>
+        </div>
         <div class="left-panel">
             <div class="editor-section">
                 <textarea id="template" spellcheck="false"></textarea>
